--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "your awesome title"
-  subheading: "your awesome subheading"
+  heading: "Jack Griffiths' e-Portfolio"
+  subheading: "Deciphering Big Data"
   banner: "your awesome url"
